--- a/Volo.IdentityServer.Web/Views/Shared/_Layout.cshtml
+++ b/Volo.IdentityServer.Web/Views/Shared/_Layout.cshtml
@@ -36,13 +36,13 @@
                     </span>
                 </a>
             </div>
-
             @if (name != null)
             {
                 <ul class="nav navbar-nav">
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">@name <b class="caret"></b></a>
                         <ul class="dropdown-menu">
+                            <li><a asp-action="Register" asp-controller="Account">Register</a></li>
                             <li><a asp-action="Logout" asp-controller="Account">Logout</a></li>
                         </ul>
                     </li>
@@ -50,11 +50,9 @@
             }
         </div>
     </div>
-
     <div class="container body-content">
         @RenderBody()
     </div>
-
     <script src="~/lib/jquery/jquery.js"></script>
     <script src="~/lib/bootstrap/js/bootstrap.js"></script>
     @RenderSection("scripts", required: false)
